[package]
name = "rust-reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1"
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
hyper-tls = "0.5.0"
tokio-native-tls = "0.3.1"
mime_guess = "2.0.4"


[dev-dependencies]
anyhow = "1"
