[package]
name = "rust-reverse-proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1"
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
mime_guess = "2.0.4"
futures = "0.3.28"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"]}
hyper-rustls = "0.24.1"
flate2 = "1.0.26"
async-compression = { version = "0.4.1", features = ["tokio", "gzip", "deflate"] }
brotli2 = "0.3.2"


[dev-dependencies]
anyhow = "1"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.0"
