[package]
name = "rust-reverse-proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1"
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
mime_guess = "2.0.4"
headers = { package = "headers-accept-encoding", version = "1.0" }
futures = "0.3.28"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"]}
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hyper-rustls = "0.24.1"
flate2 = "1.0.26"
async-compression = { version = "0.4.1", features = ["tokio", "gzip", "deflate", "brotli"] }
pin-project = "1.1.3"
bytes = "1.4.0"
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
dotenv = "0.15.0"
log = "0.4.19"
env_logger = "0.10.0"


[dev-dependencies]
anyhow = "1"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.0"

[features]
# Compression
compression = ["compression-brotli", "compression-deflate", "compression-gzip"]
compression-brotli = ["async-compression/brotli"]
compression-deflate = ["async-compression/deflate"]
compression-gzip = ["async-compression/deflate"]
